// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) If the end position is absolute, the delimiter following the class name is also included in the line wrapping.' > expectation 1`] = `
"//------------------------------------------------------------------| printWidth=69 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className="lorem ipsum dolor sit amet consectetur adipiscing"
    >
      {children}
    </div>
  );
}
"
`;

exports[`'(2) If the end position is absolute, the delimiter following the class name is also included in the line wrapping.' > expectation 1`] = `
"//-------------------------------------------------------| printWidth=58 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={\`lorem ipsum dolor sit amet consectetur
        adipiscing\`}
    >
      {children}
    </div>
  );
}
"
`;

exports[`'(3) If the end position is absolute, the delimiter following the class name is also included in the line wrapping.' > expectation 1`] = `
"//---------------------------------------------------------| printWidth=60 (in snapshot)
export function Foo({ children }) {
  return (
    <div
      className={\` lorem ipsum dolor sit amet consectetur
        adipiscing \`}
    >
      {children}
    </div>
  );
}
"
`;
